# bcam

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt
bcam/: __init__.py  __main__.py  gcode.py  program.py  tool.py  util.py
